--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -3,6 +3,10 @@ header {
     height: 50px;
     padding: 10px 15px 0 15px;
     background: url("/img/bar.png") no-repeat;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    right: 0px;
 }
 
 #logo {
@@ -19,7 +23,7 @@ header {
     display: inline-block;
     position: relative;
     float: left;
-    margin-right: 5px;
+    margin: 3px 5px 0 -70px;
     width: 60px;
 }
 
@@ -28,4 +32,5 @@ header {
     display: inline-block;
     position: relative;
     float: right;
+    margin-top: 3px;
 }
