--- a/src/main/resources/templates/html/notice/write.html
+++ b/src/main/resources/templates/html/notice/write.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <meta charset="UTF-8">
-<head lang="en" th:replace="common/header :: header"></head>
+<head>
+	<link rel="stylesheet" href="/css/listAct.css">
+	<th:block th:replace="common/head.html"/>
+<!--	<link rel="stylesheet" href="/css/test2.css">-->
+</head>
 <body>
 	<!-- Summernote Editor -->
 	<script >
@@ -40,7 +44,7 @@
 			}
 		});
 	</script>
-
+<header th:replace="common/menu :: header"></header>	
 <div lang="en" th:replace="common/menu :: menu"></div>
 
 <div id="main" style="margin-left: 15%">
@@ -86,28 +90,10 @@
 			</div>
 	    </form>
 	</div>
-
-    <form action="/notice/post" method="post">
-    	제목 : <input type="text" name="title" maxlength="10"> <br>
-    	작성자 : <input type="text" name="writer"> <br>
-    	<input type="hidden" value="0" name="view">
-    	<input type="hidden" value="1" name="topCategory">
-        Sub: 
-        <select name="categoryId">
-        	<option type="number" value="1">전체</option>
-        	<option type="number" value="2">자원봉사자</option>
-        	<option type="number" value="3">이용자</option>
-        </select><br>
-        
-        <textarea name="content"></textarea><br>
-
-        <input type="submit" value="등록">
-        <a th:href="@{/notice}">목록</a>
-    </form>
     
     <div lang="en" th:replace="common/footer :: footer"></div>
 
 </div>
-
+	
 </body>
 </html>
