--- a/src/main/resources/templates/common/head.html
+++ b/src/main/resources/templates/common/head.html
@@ -27,6 +27,15 @@
 
 	<script th:inline="javascript">
 
+        // var logout = function() {
+        //     $.post("/logout", function() {
+        //         //$("#user").html('');
+        //         $(".unauthenticated").show();
+        //         $(".authenticated").hide();
+        //     })
+        //     return true;
+        // }
+
         $.get("/userdata/getBasicInfo", function(data) {
             if(typeof data.name != "undefined"){
                 //$("#user").html(data.name);
@@ -48,6 +57,9 @@
 
 
             }
+            // else{
+            //     logout();
+            // }
         });
 
         $( document ).ready(function() {
