--- a/src/main/resources/templates/html/user/user.html
+++ b/src/main/resources/templates/html/user/user.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
+  <link rel="stylesheet" href="/css/listAct.css">
   <th:block th:replace="common/head.html"/>
-  <link rel="stylesheet" href="/css/user.css">
+<!--  <link rel="stylesheet" href="/css/user.css">-->
 </head>
 <body>
   <header th:replace="common/menu :: header"></header>
@@ -10,78 +11,112 @@
   <div lang="en" th:replace="common/menu :: menu"></div>
 
   <div id="main">
-    <div style="width: 90%">
+<!--    <div class="">-->
       <div class="upper">
-        <div>
-          <h4 class="header">유저 관리</h4>
-        </div>
-        <div class="menus">
-          <form class="searchmenu" th:action="@{'/user'}" method="GET">
-            <select class="searchtype" name="condition">
-              <option value="1">유저이름</option>
-              <option value="2">닉네임</option>
-            </select>
-            <input name="keyword" type="text" placeholder="검색어를 입력해주세요">
-<!--            <button>검색하기</button>-->
-          </form>
+        <h4 class="header">유저 관리</h4>
+        <div class="menus" style="width: 340px">
+
+            <form th:action="@{'/user'}" method="GET">
+              <div class="selectmenu">
+                <div class="selectm">
+                  <select class="back searchtype" name="condition">
+                    <option value="1">유저이름</option>
+                    <option value="2">닉네임</option>
+                  </select>
+                </div>
+              </div>
+              <div class="searchlist searchboxlist">
+                <input id="search" name="keyword" type="search" placeholder="검색어를 입력해주세요">
+<!--                            <button>검색하기</button>-->
+              </div>
+            </form>
+
+
         </div>
       </div>
-      <div class="list">
-        <table>
+
+      <div class="actList">
+        <table style="width: 100%;" cellpadding="0" cellspacing="0">
           <thead>
-          <tr>
-            <th scope="col">#</th>
-            <th scope="col">유저 이름</th>
-            <th scope="col">닉네임</th>
-            <th scope="col">유저타입</th>
+          <tr class="top">
+            <th style="border-radius: 15px 0 0 0;">No.</th>
+            <th>유저 이름</th>
+            <th>닉네임</th>
+            <th style="border-radius: 0 15px 0 0;">유저타입</th>
           </tr>
           </thead>
 
           <tbody>
           <tr th:each="userInfo: ${simpleUserList}">
-            <th scope="row">
+            <th id="no">
               <span th:text="${totalNum}-10*${simpleUserList.number}-${userInfoStat.count}+1"></span>
             </th>
             <td>
               <!--            <a th:href="@{'/user/detail/' + ${userInfo.id}}">-->
-              <a th:href="@{'/user/edit/' + ${userInfo.id}}">
+              <a class="detail-link" th:href="@{'/user/edit/' + ${userInfo.id}}">
                 <span th:text="${userInfo.name}"></span>
               </a>
             </td>
             <td>
               <span th:text="${userInfo.nickname}"></span>
             </td>
-            <td>
-              <span th:if="${userInfo.userType==1}"><img src="/img/admin.png"></span>
-              <span th:if="${userInfo.userType==0}"><img src="/img/user.png"></span>
+            <td class="status">
+              <span th:if="${userInfo.userType==1}"><img class="condition" src="/img/admin.png"></span>
+              <span th:if="${userInfo.userType==0}"><img class="condition" src="/img/user.png"></span>
             </td>
           </tr>
           </tbody>
         </table>
       </div>
       <div class="down">
-        <div>
-          <ul class="pagination">
+        <div id="Paging">
           <span th:if="${!simpleUserList.first}">
-            <li class="page-item">
-              <a class="page-link" th:href="'?page='+${simpleUserList.number-1}+'&keyword='+${keyword}+'&condition='+${condition}">&larr; Previous</a>
-            </li>
+            <button id="prev" name="button">
+              <a th:href="'?page='+${simpleUserList.number-1}+'&keyword='+${keyword}+'&condition='+${condition}"> < </a>
+            </button>
           </span>
-            <span th:if="${!simpleUserList.last}">
-            <li class="page-item">
-              <a class="page-link" th:href="'?page='+${simpleUserList.number+1}+'&keyword='+${keyword}+'&condition='+${condition}">Next &rarr;</a>
-            </li>
+          <button th:each="pageNo : *{#numbers.sequence(((simpleUserList.number)/5)*5+1, ((totalNum)/10)+1>5 ? ((simpleUserList.number)/5)*5+5 : ((totalNum)/10)+1 )}"
+            th:class="${pageNo} == ${simpleUserList.number+1} ? one : plist">
+              <a th:href="'?page='+${pageNo-1}+'&keyword='+${keyword}+'&condition='+${condition}">
+                <span th:text="${pageNo}"></span>
+              </a>
+          </button>
+          <span th:if="${!simpleUserList.last}">
+            <button id="next" name="button">
+              <a th:href="'?page='+${simpleUserList.number+1}+'&keyword='+${keyword}+'&condition='+${condition}"> > </a>
+            </button>
           </span>
-          </ul>
+
+
+<!--          <span th:each="pageNo : *{#numbers.sequence(((simpleUserList.number)/5)*5+1, ((simpleUserList.number)/5)*5+5 )}">-->
+<!--            <span th:text="${pageNo}"></span>-->
+<!--          </span>-->
+<!--          <ul>-->
+<!--          <span th:if="${!simpleUserList.first}">-->
+<!--            <li>-->
+<!--              <button id="prev" name="button">-->
+<!--                <a th:href="'?page='+${simpleUserList.number-1}+'&keyword='+${keyword}+'&condition='+${condition}"> 이전 </a>-->
+<!--              </button>-->
+<!--            </li>-->
+<!--          </span>-->
+<!--          <span th:if="${!simpleUserList.last}">-->
+<!--            <li>-->
+<!--              <button id="next" name="button">-->
+<!--                <a th:href="'?page='+${simpleUserList.number+1}+'&keyword='+${keyword}+'&condition='+${condition}"> 다음 </a>-->
+<!--              </button>-->
+<!--            </li>-->
+<!--          </span>-->
+<!--          </ul>-->
         </div>
-        <div>
-          <a th:href="@{/user/add}">
-            <button>유저추가</button>
-          </a>
-        </div>
+        <button id="list" type="button" name="button">
+          <a th:href="@{/user/add}"><img id="addBtn" src="/img/add_user.png"></a>
+        </button>
       </div>
-    </div>
+<!--    </div>-->
   </div>
   <div lang="en" th:replace="common/footer :: footer"></div>
+  <script>
+    $('#page_list')
+  </script>
 </body>
 </html>
