--- a/src/main/resources/templates/common/menu.html
+++ b/src/main/resources/templates/common/menu.html
@@ -36,7 +36,7 @@
 <!--    </div>-->
 <!--</div>-->
 <header th:fragment="header">
-    <div id="logo">S A N G D A E R O</div>
+    <div id="logo"><a style="color: inherit;text-decoration: none;" th:href="@{/}">S A N G D A E R O</a></div>
     <div id="button">
         <a class="authenticated"><img id="onoff" src="/img/on.png" alt="on"></a>
         <a class="unauthenticated" th:href="@{/login}"><img id="loginout" src="/img/login.png" alt="on"></a>
