--- a/src/main/resources/static/css/manageAct.css
+++ b/src/main/resources/static/css/manageAct.css
@@ -14,11 +14,19 @@
 #actManage {
   background-color: white;
   padding-left: 30px;
-  border-radius: 0 0 15px 15px;
-  width: 100%;
+  /*border-radius: 0 0 15px 15px;*/
+  /*width: 100%;*/
   height: 650px;
   text-align: left;
   overflow: auto;
+  border-radius: 10px;
+}
+.title{
+  display: inline-block;
+  width: 130px;
+  font-size: 16px;
+  font-weight: 500;
+  vertical-align: middle;
 }
 
 input[type=text]{
@@ -69,7 +77,7 @@ input[type=textarea] {
   width: 400px;
   height: 200px;
   color:  #a5a5a5;
-  margin-left: 10px;
+  margin: 20px 20px 0 0;
 }
 
 
@@ -86,7 +94,6 @@ input[type=textarea] {
 }
 
 .bar{
-  width: 100%;
   height: 50px;
   background-color: #bbedd5;
   border-radius: 15px 15px 0px 0;
@@ -168,7 +175,7 @@ img {
 #buttonSet {
   float: right;
   position: relative;
-  right: -40px;
+  right: -10px;
   margin-top: 10px;
 }
 
@@ -180,6 +187,7 @@ img {
 
 .user{
   background: url('/img/28.png');
+  margin-bottom: 20px;
 }
 .charge{
   background: url('/img/27.png');
@@ -209,7 +217,8 @@ img {
   border: 1px solid #a5a5a5;
   float: left;
   color: #a5a5a5;
-  padding-left: 45px;
+  padding: 0px;
+  padding-left: 15px;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   border-radius: 15px;
@@ -229,7 +238,8 @@ img {
   border: none;
   background-color: #f2f2f2;
   margin: 30px;
-  margin-left: 80px;
+  margin-top: 5px;
+  /*margin-left: 80px;*/
 }
 .sub_contentbox .leftmenu, .rightmenu{
   float: left;
@@ -244,7 +254,7 @@ img {
 }
 
 .explanationbox{
-  margin-top: 20px;
+  /*margin-top: 20px;*/
 }
 @media (max-width:1588px){
 
@@ -254,9 +264,9 @@ img {
 
 }
 @media (max-width:1411px){
-  #main{
-    width:70%;
-  }
+  /*#main{*/
+  /*  width:70%;*/
+  /*}*/
   #actManage{
     height: 650px;
   }
@@ -301,9 +311,9 @@ img {
 
 }
 @media (max-width:1176px){
-  #main{
-    width:60%;
-  }
+  /*#main{*/
+  /*  width:60%;*/
+  /*}*/
   .rightmenu2{
     margin-left: 0;
     margin-top: 10px;
@@ -332,7 +342,7 @@ img {
     height: 1100px;
   }
   .workertext{
-    top: 0;
+    /*top: 0;*/
   }
   .endtimemenu{
     margin-bottom: 10px;
@@ -388,11 +398,11 @@ img {
   .searchlist input#search {
     margin-bottom: 20px;
   }
-  input[type=date] {
-    width: 50px !important;
-  }
-  input[type=time] {
-    width: 50px !important;
-  }
+  /*input[type=date] {*/
+  /*  width: 50px !important;*/
+  /*}*/
+  /*input[type=time] {*/
+  /*  width: 50px !important;*/
+  /*}*/
 
 }
