--- a/src/main/resources/templates/common/menu.html
+++ b/src/main/resources/templates/common/menu.html
@@ -36,10 +36,14 @@
 <!--    </div>-->
 <!--</div>-->
 <header th:fragment="header">
-    <div id="logo"><a style="color: inherit;text-decoration: none;" th:href="@{/}">S A N G D A E R O</a></div>
+    <div id="logo">
+        <a style="color: inherit;text-decoration: none;" th:href="@{/}">
+            <img style="width: 70%;padding-top: 7px;padding-left: 4px" src="/img/mainlogo.png">
+        </a>
+    </div>
     <div id="button">
         <a class="authenticated"><img id="onoff" src="/img/on.png" alt="on"></a>
-        <a class="unauthenticated" th:href="@{/login}"><img id="loginout" src="/img/login.png" alt="on"></a>
+<!--        <a class="unauthenticated" th:href="@{/login}"><img id="loginout" src="/img/login.png" alt="on"></a>-->
         <a class="authenticated" th:href="@{/logout}"><img id="loginout" src="/img/logout.png" alt="on"></a>
     </div>
 </header>
